--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mingle Li</title>
+    <title>Katelyn Donn</title>
     <!-- favicon -->
     <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -20,16 +20,16 @@
         <div class="banner-container">
             <img class="profile-pic" src="./img/profile.jpg" alt="profile">
             <div class="banner-text">
-                <h1>Mingle Li</h1>
-                <h3>Software Engineer, Student</h3>
+                <h1>Katelyn Donn</h1>
+                <h3>DS & Finance @ Northeastern</h3>
                 <div class="socials-container">
-                    <a href="https://github.com/minglethepringle" target="_blank">
+                    <a href="https://github.com/katelyndonn" target="_blank">
                         <img src="./img/icons/github.png" alt="github">
                     </a>
-                    <a href="https://www.linkedin.com/in/mingleli/" target="_blank">
+                    <a href="https://www.linkedin.com/in/katelyndonn/" target="_blank">
                         <img src="./img/icons/linkedin.png" alt="linkedin">
                     </a>
-                    <a href="mailto:mingle.g.li@gmail.com" target="_blank">
+                    <a href="mailto:donn.k@northeastern.edu" target="_blank">
                         <img src="./img/icons/email.png" alt="email">
                     </a>
                 </div>
@@ -51,21 +51,9 @@
             <div class="window-btns">
                 <svg xmlns="http://www.w3.org/2000/svg" width="54" height="14" viewBox="0 0 54 14"><g fill="none" fill-rule="evenodd" transform="translate(1 1)"><circle cx="6" cy="6" r="6" fill="#FF5F56" stroke="#E0443E" stroke-width=".5"></circle><circle cx="26" cy="6" r="6" fill="#FFBD2E" stroke="#DEA123" stroke-width=".5"></circle><circle cx="46" cy="6" r="6" fill="#27C93F" stroke="#1AAB29" stroke-width=".5"></circle></g></svg>
             </div>
-            <p>{</p>
-                <p class="indent"><span class="key">"name"</span>: <span class="value">"Mingle Li"</span>,</p>
-                <p class="indent"><span class="key">"born"</span>: <span class="value number">2003</span>,</p>
-                <p class="indent"><span class="key">"location"</span>: <span class="value">"Massachusetts"</span>,</p>
-                <p class="indent"><span class="key">"school"</span>: <span class="value">"Northeastern University"</span>,</p>
-                <p class="indent"><span class="key">"loves"</span>: [<span class="value">"code"</span>,
-                    <span class="value">"cats"</span>,
-                    <span class="value">"computers"</span>],</p>
-                <p class="indent"><span class="key">"videoGames"</span>: [<span class="value">"Rocket League"</span>],</p>
-                <p class="indent"><span class="key">"sports"</span>: [<span class="value">"pickleball"</span>, <span class="value">"ping pong"</span>],</p>
-                <p class="indent"><span class="key">"instrument"</span>: <span class="value">"<a href="https://www.youtube.com/watch?v=6Dg6jwdznJE" target="_blank">marimba</a>"</span>,</p>
-                <p class="indent"><span class="key">"personalityType"</span>: <span class="value">"ESFJ"</span>,</p>
-                <p class="indent"><span class="key">"maxPiazzaContributions"</span>: <span class="value number">1038</span>,</p>
-                <p class="indent"><span class="key">"takenBy"</span>: <span class="value">"Lilli Tobe ❤️"</span></p>
-            <p>}</p>
+            <p>
+                <h3>Hi, I'm Katelyn, a junior at Northeastern University from the Bay Area, CA. I'm enthusiastic about the blend of creative technology, sustainable business, and social impact. My current interests lie in Product + VC. I thrive in storytelling through data visualization and product analysis, most recently at Moderna and soon at HubSpot. In my free time, you can find me at an art museum or on a walk in the Boston Commons.</h3>
+            </p>
         </div>
     </section>
 
@@ -309,7 +297,7 @@
 
     <!-- Footer -->
     <footer>
-        <p>made with ☕ using plain html & css</p>
+        <p>built using html and css. template by mingle li.</p>
     </footer>
 </body>
 </html>
