--- a/index.html
+++ b/index.html
@@ -59,9 +59,21 @@
     <!-- Work -->
     <section class="section-work">
         <h2>Work Experience</h2>
-
+        
         <div class="card">
-            <img class="card-pic" src="./img/work/northeastern.png" alt="NEU">
+            <img class="card-pic" src="./img/work/hubspot.png" alt="hubspot">
+            <div class="card-details">
+                <h3><b>Incoming Associate Product Manager Intern</b></h3>
+                <p>HubSpot, Inc.</p>
+                <span class="position-date">Jun 2024 - Aug 2024</span>
+                <ul class="position-desc">
+                    <li>Summer 2024</li>
+                </ul>
+            </div>
+        </div>
+        
+        <div class="card">
+            <img class="card-pic" src="./img/work/northeastern.png" alt="neu">
             <div class="card-details">
                 <h3><b>Teaching Assistant</b></h3>
                 <p>Northeastern University, Khoury College of Computer Sciences</p>
@@ -76,79 +88,42 @@
         </div>
 
         <div class="card">
-            <img class="card-pic" src="./img/work/wordpress.png" alt="wordpress">
+            <img class="card-pic" src="./img/work/northeastern.png" alt="NEU">
             <div class="card-details">
-                <h3><b>Web Developer</b></h3>
-                <p>Freelance</p>
-                <span class="position-date">Sep 2019 - present</span>
+                <h3><b>Data Researcher</b></h3>
+                <p>Northeastern University, D'Amore-McKim School of Business</p>
+                <span class="position-date">May 2022 - present</span>
                 <ul class="position-desc">
-                    <li>Leverage WordPress to design, create, and maintain mobile-responsive sites for numerous podcast, nonprofit, medical, and entrepreneurial businesses.</li>
-                    <li>Communicate with customers to clearly establish requirements and obtain feedback to ensure full satisfaction with the end product.</li>
-                    <li>
-                        Portfolio:
-                        <a class="border" href="https://www.nwpcmd.com/" target="_blank">Newton Wellesley Primary Care</a>,
-                        <a class="border" href="https://womenofwayland.com/" target="_blank">Women of Wayland Podcast</a>,
-                        <a class="border" href="https://yaminiranjan.com/" target="_blank">Yamini Ranjan</a>,
-                        <a class="border" href="https://wellesleyfca.com/" target="_blank">Wellesley Family Care Associates</a>,
-                        <a class="border" href="https://nowyouarefreepod.com/" target="_blank">Now You Are Free Podcast</a>,
-                        <a class="border" href="https://amenaskincareandfacial.com/" target="_blank">Amena Skincare and Facial</a>,
-                        <a class="border" href="https://anotherwaytogoprogram.org/" target="_blank">Another Way To Go Program</a>,
-                        <a class="border" href="https://sapporobbq.com/" target="_blank">Sapporo Korean Restaurant</a>,
-                        <a class="border" href="https://kenzosushisteakhouse.com/" target="_blank">Kenzo's Sushi & Steakhouse</a>,
-                        <a class="border" href="https://www.petuniaspetparlor.com/" target="_blank">Petunia's Pet Parlor</a>,
-                        <a class="border" href="https://waylandpersonalphysicians.com/" target="_blank">Wayland Personal Physicians</a>,
-                        <a class="border" href="https://www.capecodwaterways.com/" target="_blank">Cape Cod Waterways</a>
-                    </li>
-                </ul>
-                <ul class="tech-labels">
-                    <li>elementor</li>
-                    <li>html</li>
-                    <li>css</li>
+                    <li>Orchestrate in-person surveys and A/B tests to identify relevant market data to support efficacy of marketing hypothesis.</li>
+                    <li>Conduct literature reviews regarding sustainability, green-washing, and green taxes through the Journal of Service Research.</li>
+                    <li>Extract actionable insights for next steps and developed a coherent roadmap through analysis of consumer behavior.</li>
+                    <li>Submitted findings to the 2023 AMA Academic Conference, delving into the dynamics of sustainable business practices.</li>
                 </ul>
             </div>
         </div>
 
         <div class="card">
-            <img class="card-pic" src="./img/work/toast.png" alt="toast">
+            <img class="card-pic" src="./img/work/moderna.png" alt="moderna">
             <div class="card-details">
-                <h3><b>iOS Software Engineer Intern</b></h3>
-                <p>Toast, Inc.</p>
-                <span class="position-date">Jun 2023 - Aug 2023</span>
+                <h3><b>Data Visualization Analyst Co-op</b></h3>
+                <p>Moderna, Inc.</p>
+                <span class="position-date">Jul 2023 - Dec 2023</span>
                 <ul class="position-desc">
-                    <li>Designed and implemented a "Favorite Order" feature into the <a class="border" href="https://www.toasttakeout.com/" target="_blank">Toast Takeout iOS app</a>,
-                        allowing users to mark orders as favorites and reorder them conveniently.</li>
-                    <li>Identified and resolved numerous UIKit-SwiftUI interoperability bugs in iOS 15 and 16.</li>
+                    <li>Led internal product performance analysis, using Tableau to extract user behavior insights to inform decision-making.</li>
+                    <li>Modeled projections for generative AI programs to determine viability and usability; identified features to improve UIUX.</li>
+                    <li>Digitized administrative processes using Tableau Server Client, e.g., data refresh schedules and user permission updates.</li>
+                    <li>Created scripts for user data uploads, increasing internal Tableau and Dataiku account creation and usage by 300%.</li>
+                    <li>Streamlined company-wide data extraction through Dataiku and Amazon Redshift for cleaning, blending, and analysis.</li>
+                    <li>Developed automated scripts to optimize vaccine communication, dose notifications, and appointment reminders.</li>
                 </ul>
                 <ul class="tech-labels">
-                    <li>swift</li>
-                    <li>mvvm</li>
-                    <li>swiftui</li>
+                    <li>python</li>
+                    <li>tableau</li>
+                    <li>aws</li>
+                    <li>dataiku</li>
                 </ul>
             </div>
         </div>
-
-        <div class="card">
-            <img class="card-pic" src="./img/work/zentility.jpg" alt="zentility">
-            <div class="card-details">
-                <h3><b>Full-Stack Software Engineer Co-op</b></h3>
-                <p>Zentility, Inc.</p>
-                <span class="position-date">Jan 2023 - May 2023</span>
-                <ul class="position-desc">
-                    <li>Streamlined the onboarding process for new customer acquisitions by developing an
-                        Excel bulk importer for electric and natural gas meters.</li>
-                    <li>Designed a data stack ranking page with dynamic group-by and filter clauses based on
-                        user-selected properties, providing flexible insight into customer energy use.</li>
-                    <li>Introduced server-side datatable pagination with caching using Angular Akita stores.</li>
-                </ul>
-                <ul class="tech-labels">
-                    <li>angular</li>
-                    <li>spring boot</li>
-                    <li>mysql</li>
-                </ul>
-            </div>
-        </div>
-
-        <a href="https://docs.google.com/document/d/1yafR-9ay6PmoMCeJYPZSXYlYu9S9eChAIO3NqUOz8Xo/edit?usp=sharing" target="_blank"><button class="mt"><small>my entire work history</small></button></a>
     </section>
 
 
