--- a/index.html
+++ b/index.html
@@ -209,11 +209,11 @@
         <h2>Skills</h2>
 
         <div class="skills">
-            <img src="./img/skills/angular.png" alt="angular">
-            <img src="./img/skills/react.png" alt="react">
-            <img src="./img/skills/spring.png" alt="spring boot">
-            <img src="./img/skills/node.png" alt="nodejs">
-            <img src="./img/skills/dotnet.png" alt="dotnet">
+            <img src="./img/skills/python.png" alt="python">
+            <img src="./img/skills/mysql.png" alt="mysql">
+            <img src="./img/skills/tableau.png" alt="tableau">
+            <img src="./img/skills/dataiku.png" alt="dataiku">
+            <img src="./img/skills/excel.png" alt="excel">
             <img src="./img/skills/mysql.png" alt="mysql">
             <img src="./img/skills/postgres.png" alt="postgres">
             <img src="./img/skills/firebase.png" alt="firebase">
