--- a/index.html
+++ b/index.html
@@ -214,12 +214,16 @@
             <img src="./img/skills/tableau.png" alt="tableau">
             <img src="./img/skills/dataiku.png" alt="dataiku">
             <img src="./img/skills/excel.png" alt="excel">
-            <img src="./img/skills/mysql.png" alt="mysql">
+            <img src="./img/skills/pycharm.png" alt="pycharm">
             <img src="./img/skills/postgres.png" alt="postgres">
-            <img src="./img/skills/firebase.png" alt="firebase">
+            <img src="./img/skills/github.png" alt="github">
+            <img src="./img/skills/figma.png" alt="figma">
+            <img src="./img/skills/hubspot.png" alt="hubspot">
+            <img src="./img/skills/node.png" alt="nodejs">
+            <img src="./img/skills/redis.svg" alt="redis">
+            <img src="./img/skills/mongodb.svg" alt="mongo">
+            <img src="./img/skills/css.svg" alt="css">
             <img src="./img/skills/aws.png" alt="aws">
-            <img src="./img/skills/git.png" alt="git">
-            <img src="./img/skills/python.png" alt="python">
         </div>
     </section>
 
