--- a/index.html
+++ b/index.html
@@ -132,9 +132,8 @@
         <h2>Projects</h2>
 
         <div class="card">
-            <img class="card-pic" src="./img/projects/whsremote.png" alt="whsremote">
             <div class="card-details">
-                <h3><b>WHSRemote</b></h3>
+                <h3><b>Menuette</b></h3>
 
                 <div class="project-links">
                     <a href="https://github.com/WHSRemote" target="_blank">
