--- a/index.html
+++ b/index.html
@@ -127,30 +127,21 @@
     </section>
 
 
-    <!-- Projects -->
-    <section class="section-projects">
-        <h2>Projects</h2>
+    <!-- Leadership Roles -->
+    <section class="section-leadership">
+        <h2>Leadership Roles</h2>
 
-        <div class="card">
+     <div class="card">
+            <img class="card-pic" src="./img/leadership/wise.png" alt="wise">
             <div class="card-details">
-                <h3><b>Menuette</b></h3>
-
-                <div class="project-links">
-                    <a href="https://github.com/WHSRemote" target="_blank">
-                        <img src="./img/icons/github.png" alt="github">
-                    </a>
-                    <a href="https://www.youtube.com/playlist?list=PL5Y2tGfke7b720jp0GcGiOTQhT_SCItpA" target="_blank">
-                        <img src="./img/icons/youtube.png" alt="youtube">
-                    </a>
-                </div>
-
-                <p><small>Created a remote learning webapp for Wayland High students. Contains Zoom/Google Meet class links, auto-filled class schedules, current class display on
-                    home page, homework planner, and other useful links <i>(over 500 users)</i></small></p>
-                
-                <ul class="tech-labels">
-                    <li>react</li>
-                    <li>spring boot</li>
-                    <li>mysql</li>
+                <h3><b>Co-Vice President of WeInvest</b></h3>
+                <p>WISE, Women’s Interdisciplinary Society of Entrepreneurship</p>
+                <span class="position-date">Nov 2023 - present</span>
+                <ul class="position-desc">
+                    <li>Conceive and launch WeInvest, a VC incubator advocating for equitable investment practices for underrepresented groups.</li>
+                    <li>Coordinate demo days for real-world investment exposure, enhancing students’ practical understanding of VC operations.</li>
+                    <li>Develop extensive curriculum for the cohort, including funding rounds, firm specializations, and founder pitches.</li>
+                    <li>Organize a student pitch contest within WISE for the cohort to demonstrate their acquired VC knowledge and skills.</li>
                 </ul>
             </div>
         </div>
