--- a/index.html
+++ b/index.html
@@ -145,25 +145,31 @@
                 </ul>
             </div>
         </div>
+        </section>
+
+
+        <!-- Projects -->
+        <section class="section-projects">
+            <h2>Projects</h2>
 
         <div class="card">
-            <img class="card-pic" src="./img/projects/sapporokaraoke.png" alt="SapporoKaraoke">
             <div class="card-details">
-                <h3><b>SapporoKaraoke</b></h3>
+                <h3><b>S&P 500 Dashboard</b></h3>
 
                 <div class="project-links">
-                    <a href="https://sapporokaraoke.com/" target="_blank">
-                        <img src="./img/icons/globe.png" alt="globwe">
+                    <a href="https://github.com/katelyndonn/DS3500/tree/main/S%26P500" target="_blank">
+                        <img src="./img/icons/globe.png" alt="globe">
                     </a>
                 </div>
 
-                <p><small>A full-stack custom-built solution to operate weekend night karaoke for Sapporo Restaurant patrons</small></p>
+                <p><small>Created an interactive S&P 500 Dashboard with 4 main visualizations that allow users to analyze and explore stock performance (percent growth, average closing price, top performing stocks, S&P 500 price) through user-specified time frames and industries.</small></p>
                 
                 <ul class="tech-labels">
-                    <li>react</li>
-                    <li>node</li>
-                    <li>mpv</li>
-                    <li>ffmpeg</li>
+                    <li>python</li>
+                    <li>pycharm</li>
+                    <li>dash bootstrap components</li>
+                    <li>pandas</li>
+                    <li>plotly</li>
                 </ul>
             </div>
         </div>
@@ -190,8 +196,6 @@
                 </ul>
             </div>
         </div>
-
-        <a href="https://github.com/minglethepringle" target="_blank"><button class="mt"><small>all projects i've created</small></button></a>
     </section>
 
     <!-- Skills -->
