--- a/index.html
+++ b/index.html
@@ -145,6 +145,25 @@
                 </ul>
             </div>
         </div>
+
+        <div class="card">
+            <img class="card-pic" src="./img/leadership/nuimpact.png" alt="nuimpact">
+            <div class="card-details">
+                <h3><b>Director of Operations</b></h3>
+                <p>NUImpact, NEU's Impact Investing Fund</p>
+                <span class="position-date">Apr 2023 - Jan 2024</span>
+                <ul class="position-desc">
+                    <li>Developed tailored partnership proposals, aligning fund resources with incubator needs to assist with internal sourcing.</li>
+                    <li>Spearheaded strategic outreach initiatives with student-run venture accelerators and funds across Northeast universities.</li>
+                <h3><b>Investment Analyst</b></h3>
+                <p>NUImpact, NEU's Impact Investing Fund</p>
+                <span class="position-date">Apr 2022 - Apr 2023</span>
+                    <li>Sourced 100+ local companies, drafted and created 1 Investment Review Memorandum, and closed 1 investment.</li>
+                    <li>Documented the impact of 200+ companies, conducted due diligence, evaluated financial profiles and product-market fit.</li>
+                </ul>
+            </div>
+        </div>
+        
         </section>
 
 
