--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <svg xmlns="http://www.w3.org/2000/svg" width="54" height="14" viewBox="0 0 54 14"><g fill="none" fill-rule="evenodd" transform="translate(1 1)"><circle cx="6" cy="6" r="6" fill="#FF5F56" stroke="#E0443E" stroke-width=".5"></circle><circle cx="26" cy="6" r="6" fill="#FFBD2E" stroke="#DEA123" stroke-width=".5"></circle><circle cx="46" cy="6" r="6" fill="#27C93F" stroke="#1AAB29" stroke-width=".5"></circle></g></svg>
             </div>
             <p>
-                <h3>Hi, I'm Katelyn, a junior at Northeastern University from the Bay Area, CA. I'm enthusiastic about the blend of creative technology, sustainable business, and social impact. My current interests lie in Product + VC. I thrive in storytelling through data visualization and product analysis, most recently at Moderna and soon at HubSpot. In my free time, you can find me at an art museum or on a walk in the Boston Commons.</h3>
+                <h3>Hi, I'm Katelyn, a junior at Northeastern University from the Bay Area, CA. I'm enthusiastic about the blend of creative technology, sustainable business, and social impact. My current interests lie in Product + VC. I thrive in storytelling through data visualization and product analysis, most recently at Moderna and soon at HubSpot.</h3>
             </p>
         </div>
     </section>
@@ -67,7 +67,7 @@
                 <p>HubSpot, Inc.</p>
                 <span class="position-date">Jun 2024 - Aug 2024</span>
                 <ul class="position-desc">
-                    <li>Summer 2024                                                                        </li>
+                    <li>Summer 2024                                                                     </li>
                 </ul>
             </div>
         </div>
