--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <img class="profile-pic" src="./img/profile.jpg" alt="profile">
             <div class="banner-text">
                 <h1>Katelyn Donn</h1>
-                <h3> DS & Finance @ NEU </h3></h3>
+                <h3> DS & Finance @ Northeastern University </h3></h3>
                 <div class="socials-container">
                     <a href="https://github.com/katelyndonn" target="_blank">
                         <img src="./img/icons/github.png" alt="github">
