--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
                 <h3><b>Incoming Associate Product Manager Intern</b></h3>
                 <p>HubSpot, Inc.</p>
                 <span class="position-date">Jun 2024 - Aug 2024</span>
-                <ul class="position-desc">
-                    <li><b>Summer 2024</b></li>
+                <ul class="position-desc" style="margin-bottom: 5px;"> 
+                    <li>Summer 2024</li>
                 </ul>
             </div>
         </div>
