--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <h3><b>Incoming Associate Product Manager Intern</b></h3>
                 <p>HubSpot, Inc.</p>
                 <span class="position-date">Jun 2024 - Aug 2024</span>
-                <ul class="position-desc" style="margin-bottom: 5px;"> 
+                <ul class="position-desc" style="padding-left: 1.5rem;"> 
                     <li>Summer 2024</li>
                 </ul>
             </div>
