--- a/index.html
+++ b/index.html
@@ -65,10 +65,7 @@
             <div class="card-details">
                 <h3><b>Incoming Associate Product Manager Intern</b></h3>
                 <p>HubSpot, Inc.</p>
-                <span class="position-date">Jun 2024 - Aug 2024</span>
-                <ul class="position-desc"> 
-                    <li style="padding-right: 400px;">Summer 2024</li>
-                </ul>
+                <span class="position-date">Summer 2024</span>
             </div>
         </div>
         
